Fix vert alignment of overview bar small key values

--- a/pages/scss/overview.scss
+++ b/pages/scss/overview.scss
@@ -129,7 +129,7 @@ html:not(:focus-within) {
         .key {
             font-weight: 500;
             display: inline-flex;
-            align-items: center;
+            align-items: baseline;
             white-space: nowrap;
 
             &::after {
